--- a/index.html
+++ b/index.html
@@ -143,8 +143,12 @@
             <div class="code-digit"></div>
         </div>
         <div class="buttons">
-            <button onclick="addToInput('←')">Влево</button>
-            <button onclick="addToInput('→')">Вправо</button>
+            <button onclick="addToInput('→')">
+                <span class="arrow">→</span> Вправо
+            </button>
+            <button onclick="addToInput('←')">
+                <span class="arrow">←</span> Влево
+            </button>
         </div>
         <p id="status"></p>
     </div>
