--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
             --primary: #FF5722;
             --success: #4CAF50;
             --error: #F44336;
-            --bg: #f5f5f5;
-            --text: #333333;
+            --bg: #f8f9fa;
+            --text: #495057;
+            --soft-gray: #e9ecef;
+            --border: #dee2e6;
         }
 
         body {
@@ -38,6 +40,7 @@
             color: var(--primary);
             margin-bottom: 1.5rem;
             font-size: clamp(1.5rem, 5vw, 2.2rem);
+            font-weight: 600;
         }
 
         .code-display {
@@ -51,17 +54,19 @@
         .code-digit {
             width: 45px;
             height: 45px;
-            border: 2px solid var(--primary);
+            border: 2px solid var(--soft-gray);
             border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 1.4em;
             transition: all 0.3s ease;
-            background: rgba(255, 87, 34, 0.1);
+            background: white;
+            color: var(--text);
         }
 
         .code-digit.filled {
+            border-color: var(--primary);
             background: var(--primary);
             color: white;
             transform: scale(1.05);
@@ -71,7 +76,6 @@
             display: flex;
             gap: 1rem;
             justify-content: center;
-            flex-direction: column;
             width: 100%;
             max-width: 300px;
             margin: 0 auto;
@@ -84,13 +88,16 @@
             cursor: pointer;
             font-size: 1.1em;
             transition: all 0.3s ease;
-            background: linear-gradient(145deg, #FF5722, #FF9800);
-            color: white;
+            background: var(--soft-gray);
+            color: var(--text);
+            flex: 1;
         }
 
         button:hover {
+            background: var(--primary);
+            color: white;
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(255, 87, 34, 0.3);
+            box-shadow: 0 5px 15px rgba(255, 87, 34, 0.2);
         }
 
         #status {
