--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         .code-digit.filled {
             border-color: var(--neutral);
             background: var(--neutral);
-            color: white;
-            transform: scale(1.05);
+            color: white; /* Белый цвет стрелочек */
+            transform: scale(1);
         }
 
         .code-digit.error {
@@ -109,7 +109,6 @@
         button:hover {
             background: var(--primary);
             color: white;
-            transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(255, 87, 34, 0.2);
         }
 
