--- a/index.html
+++ b/index.html
@@ -63,26 +63,23 @@
             font-size: 1.4em;
             transition: all 0.3s ease;
             background: white;
-            color: var(--text);
+            color: white; /* Белый цвет стрелочек */
         }
 
         .code-digit.filled {
             border-color: var(--neutral);
             background: var(--neutral);
-            color: white; /* Белый цвет стрелочек */
-            transform: scale(1);
+            transform: scale(1); /* Убрано увеличение */
         }
 
         .code-digit.error {
             border-color: var(--primary);
             background: var(--primary);
-            color: white;
         }
 
         .code-digit.success {
             border-color: var(--success);
             background: var(--success);
-            color: white;
         }
 
         .buttons {
