--- a/index.html
+++ b/index.html
@@ -69,8 +69,20 @@
         .code-digit.filled {
             border-color: var(--neutral);
             background: var(--soft-gray);
-            color: white;
+            color: gray;
             transform: scale(1.05);
+        }
+
+        .code-digit.error {
+            border-color: var(--primary);
+            background: var(--primary);
+            color: white;
+        }
+
+        .code-digit.success {
+            border-color: var(--success);
+            background: var(--success);
+            color: white;
         }
 
         .buttons {
