--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
         }
 
         .code-digit.error {
-            border-color: var(--primary);
-            background: var(--primary);
-            color: white;
+            border-color: var(--primary) !important;
+            background: var(--primary) !important;
+            color: white !important;
         }
 
         .code-digit.success {
-            border-color: var(--success);
-            background: var(--success);
-            color: white;
+            border-color: var(--success) !important;
+            background: var(--success) !important;
+            color: white !important;
         }
 
         .buttons {
