--- a/index.html
+++ b/index.html
@@ -203,8 +203,9 @@
                 status.innerHTML = `
                     <div class="success">
                         <div>Замок открыт!</div>
-                        <div class="hint">Подсказка для следующего этапа:<br>
-                            откройте ящик стола, который никогда не открывается…
+                        <div class="hint">Поздравляем! <br>
+                            Вы получили доступ к секретному меню кофемашины.<br>
+                            Ваш заказ: тройной эспрессо с… подойти к холодильнику и проверить отделение для овощей 😉
                         </div>
                     </div>
                 `;
