--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Первоапрельский Квест</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
-        <div id="qr1" class="qr-section">
-            <h2>QR-код 1: Кофемашина</h2>
+        <div id="step1" class="step-section fade-in">
+            <img src="images/atb-logo.png" alt="ATB Logo" style="max-width: 200px; margin-bottom: 2rem;">
+            <h2>Шаг 1: Проверка на внимательность</h2>
             <div class="task">
                 <p>Чтобы получить доступ к следующей подсказке, введите код: число π (пи) до десятого знака</p>
-                <input type="text" id="pi-input" placeholder="Введите число π">
-                <button onclick="checkPi()">Проверить</button>
+                <input type="text" id="pi-input" placeholder="Введите число π" class="input-field">
+                <button onclick="checkPi()" class="next-button">Проверить</button>
             </div>
-            <div id="qr1-result" class="result hidden">
-                <p>Поздравляем! Вы ввели... неправильный код. Но мы вас любим, поэтому вот новая ссылка →</p>
-                <div class="qr-code" id="qr2-link"></div>
+            <div id="step1-result" class="result hidden">
+                <p>Поздравляем! Вы ввели... неправильный код. Но мы вас любим, поэтому вот следующий шаг →</p>
+                <a href="step2.html" class="next-button">Перейти к шагу 2</a>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html> 
