--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div id="step1-result" class="result hidden">
                 <p>Поздравляем! Вы ввели... неправильный код. Но мы вас любим, поэтому вот следующий шаг →</p>
-                <a href="step2.html" class="next-button">Перейти к шагу 2</a>
+                <a href="pages/step2.html" class="next-button">Перейти к шагу 2</a>
             </div>
         </div>
     </div>
