--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h1>Финальная страница</h1>
             <p>Поздравляем! Вы прошли квест... и стали жертвой 1 апреля!</p>
             <p>Ваш приз – вечная слава и этот круассан 🥐</p>
-            <iframe src="https://rutube.ru/play/embed/ac4ac2f35c35fe2dc78e9a66c48097cb/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            <iframe src="https://rutube.ru/play/embed/ac4ac2f35c35fe2dc78e9a66c48097cb?autoplay=1" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <script src="script.js"></script>
