--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div id="page3" class="page hidden">
             <h1>Задание 3</h1>
-            <p>ВНИМАНИЕ: Съешьте ложку горчицы/соли, чтобы доказать лояльность компании. Иначе доступ закрыт!</p>
+            <p>ВНИМАНИЕ: Съешьте ложку соли, чтобы доказать лояльность компании. Иначе доступ закрыт!</p>
             <div id="page3Result" class="hidden">
                 <button onclick="confirmTask(3)">Я съел</button>
             </div>
@@ -49,7 +49,7 @@
                 <button onclick="confirmTask(4)">Я сделал</button>
             </div>
             <div id="page4Success" class="hidden">
-                <p>Ваш энтузиазм впечатлил HR. Переходите →</p>
+                <p>Ваш энтузиазм впечатлил генерального директора. Переходите →</p>
                 <button onclick="nextPage(4)">Далее</button>
             </div>
         </div>
