--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div id="ads-container"></div>
             <div id="page6Result" class="hidden">
                 <img src="images/terminator-thumb.jpg" alt="Terminator" class="terminator">
-                <p>Вы спасили мир! SKYNET побежден! Ваш финальный код →</p>
+                <p>Вы спасили мир! SKYNET побежден! Ваше финальное задание →</p>
                 <button onclick="nextPage(6)">Далее</button>
             </div>
         </div>
